--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,4 +11,7 @@ updates:
     directory: '/'
     schedule:
       # Check for updates to GitHub Actions every weekday
-      interval: 'daily'
+      interval: 'weekly'
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
