--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,14 +4,11 @@ updates:
   - package-ecosystem: 'npm'
     # Look for `package.json` and `lock` files in the `root` directory
     directory: '/'
-    # Check the npm registry for updates every day (weekdays)
+    # Check the npm registry for updates every week
     schedule:
-      interval: 'daily'
+      interval: 'weekly'
   - package-ecosystem: 'github-actions'
     directory: '/'
-    schedule:
-      # Check for updates to GitHub Actions every weekday
-      interval: 'weekly'
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-patch"]
