--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Lighthouse CI
 on: [push]
 jobs:
   lighthouseci:
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
+          cache: 'npm'
       - run: npm ci && npm install -g @lhci/cli@0.11.x
       - run: npm run build
       - run: lhci autorun
