--- a/lighthouserc.yml
+++ b/lighthouserc.yml
@@ -4,5 +4,12 @@ ci:
       ['http://localhost/', 'http://localhost/exam', 'http://localhost/results']
     staticDistDir: './dist'
     isSinglePageApplication: true
+  assert:
+    assertions:
+      'categories:performance': ['error', { 'minScore': 0.94 }]
+      'categories:accessibility': ['error', { 'minScore': 0.93 }]
+      'categories:best-practices': ['error', { 'minScore': 0.92 }]
+      'categories:pwa': ['error', { 'minScore': 0.90 }]
+      'categories:seo': ['error', { 'minScore': 1 }]
   upload:
     target: 'temporary-public-storage'
