ci: increase number of runs for lighthouse

--- a/lighthouserc.yml
+++ b/lighthouserc.yml
@@ -1,5 +1,6 @@
 ci:
   collect:
+    numberOfRuns: 5
     url:
       ['http://localhost/', 'http://localhost/exam', 'http://localhost/results']
     staticDistDir: './dist'
