--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "**/*.css"
   ],
   "scripts": {
-    "start": "webpack serve --config webpack.dev.cjs",
+    "start": "npm run dev",
+    "dev": "webpack serve --config webpack.dev.cjs",
     "build": "webpack --config webpack.prod.cjs",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
@@ -25,17 +26,17 @@
     "node": ">=16.15"
   },
   "dependencies": {
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-syntax-highlighter": "^13.5.0",
-    "bootstrap": "^4.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
+    "@mui/styles": "^5.12.3",
+    "bootstrap": "^4.6.2",
     "firebase": "^8.3.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-syntax-highlighter": "^15.4.3",
-    "wouter": "^2.7.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "wouter": "^2.10.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -47,6 +48,9 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.14",
     "@babel/runtime": "^7.13.10",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "babel-jest": "^26.6.3",
@@ -75,8 +79,8 @@
     "standard-version": "^9.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^8.0.18",
-    "typescript": "^4.2.3",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.82.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.6.0",
