--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "**/*.css"
   ],
   "scripts": {
-    "start": "webpack serve --config webpack.dev.cjs",
+    "start": "npm run dev",
+    "dev": "webpack serve --config webpack.dev.cjs",
     "build": "webpack --config webpack.prod.cjs",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "lint:js": "eslint src/**/*.{js,jsx,ts,tsx}",
+    "lint:js": "eslint --ext .tsx,.jsx,.js,.ts src/ pages/",
     "analyze": "webpack --profile --json > stats.json --config webpack.prod.cjs",
     "test": "node --experimental-vm-modules node_modules/.bin/jest --config jest.config.cjs --coverage",
     "release": "standard-version",
@@ -25,17 +26,16 @@
     "node": ">=16.15"
   },
   "dependencies": {
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-syntax-highlighter": "^13.5.0",
-    "bootstrap": "^4.6.1",
-    "firebase": "^8.3.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-syntax-highlighter": "^15.4.3",
-    "wouter": "^2.7.4"
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
+    "bootstrap": "^4.6.2",
+    "firebase": "^8.10.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "wouter": "^2.10.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -47,36 +47,39 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.14",
     "@babel/runtime": "^7.13.10",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "babel-jest": "^26.6.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-imports": "^2.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^1.3.0",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^3.1.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^5.3.1",
-    "jest": "^28.1.0",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^1.3.9",
-    "prettier": "2.2.1",
+    "prettier": "^2.8.8",
     "size-plugin": "^3.0.0",
     "source-map-loader": "^2.0.1",
     "standard-version": "^9.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^8.0.18",
-    "typescript": "^4.2.3",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.82.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.6.0",
